--- a/ECommerce/ECommerce.WEB/Views/Wishlist/_WishList.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Wishlist/_WishList.cshtml
@@ -20,11 +20,11 @@
                 {
                     <li>
                         <div class="media">
-                            <a href="#">
+                            <a href="@Url.Action("Detail","Product",new {id=wish.ProductId })">
                                 <img alt="" class="mr-3" src="~/Uploads/ProductImage/@wish.ImagePath">
                             </a>
                             <div class="media-body">
-                                <a href="#">
+                                <a href="@Url.Action("Detail","Product",new {id=wish.ProductId })">
                                     <h4>@wish.ProductName</h4>
                                 </a>
                                 @if (wish.DiscountRate > 0)
