Anasayfada bulunan ürünleri getiren parçalı view düzenlendi

--- a/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Product/_Product.cshtml
@@ -30,18 +30,18 @@
                             <div class="box-5">
                                 <div class="product-box product-full">
                                     <div class="img-block">
-                                        <a href="@Url.Action("Detail","Product",new {id=product.ProductId })">
+                                        <a href="@Url.Action("Detail","Product",new {id=product.ProductId,@class="blackcolor" })">
                                             <img src="~/Uploads/ProductImage/@product.ImagePath" class=" img-fluid bg-img" alt="">
                                         </a>
                                             <div class="cart-right">
-                                                <a href="@Url.Action("Add", "UserCart", new { productId = product.ProductId })" class="addcart-box" title="Sepete Ekle"><i class="ti-shopping-cart"></i></a>
-                                                <a href="@Url.Action("Add", "Wishlist", new { productId = product.ProductId })" title="Favorilere Ekle"><i class="ti-heart" aria-hidden="true"></i></a>
+                                                <a href="@Url.Action("Add", "UserCart", new { productId = product.ProductId,@class="blackcolor" })" class="addcart-box" title="Sepete Ekle"><i class="ti-shopping-cart"></i></a>
+                                                <a href="@Url.Action("Add", "Wishlist", new { productId = product.ProductId,@class="blackcolor" })" title="Favorilere Ekle"><i class="ti-heart" aria-hidden="true"></i></a>
                                                 <a href="" data-toggle="modal" data-target="#quick-view@(product.ProductId)" title="İncele"><i class="ti-search" aria-hidden="true"></i></a>
                                                 <a href="compare.html" title="Karşılaştır"><i class="ti-reload" aria-hidden="true"></i></a>
                                             </div>
                                     </div>
                                     <div class="product-info">
-                                        <h6><a href="@Url.Action("Detail","Product",new {id=product.ProductId })" >@product.ProductName</a></h6>
+                                        <h6><a href="@Url.Action("Detail","Product",new {id=product.ProductId,@class="blackcolor" })" >@product.ProductName</a></h6>
                                         <h5>@product.Amount.ConvertToMoney()</h5>
                                     </div>
 
@@ -66,10 +66,21 @@
                                                             <h6 class="product-title">Ürün Bilgisi</h6>
                                                             <p>@product.Explanation</p>
                                                         </div>
-                                                        <div class="product-buttons">
-                                                            <a href="@Url.Action("Add","UserCart",new {productId=product.ProductId })" class="btn btn-solid">Sepete Ekle</a>
-                                                            <a href="@Url.Action("Detail","Product",new {id=product.ProductId })" class="btn btn-solid">Ürün detayı</a>
-                                                        </div>
+                                                        <label> Seçenek</label>
+                                                        @using (Html.BeginForm("Add", "UserCart"))
+                                                        {
+                                                            foreach (ProductMapRequiredFieldModel productMapRequired in product.ProductMapRequiredFieldModel)
+                                                            {
+                                                                @Html.RadioButtonFor(s => productMapRequired.ProductMapRequiredFieldId, new { @class = "form-control", id = productMapRequired.ProductMapRequiredFieldId })
+                                                                @Html.LabelForModel(productMapRequired.Field, new { @for = productMapRequired.ProductMapRequiredFieldId })
+                                                            }
+                                                            <div class="product-buttons">
+                                                                <input type="submit" class="btn btn-solid" value="Sepete Ekle" />
+                                                                <a href="@Url.Action("Detail","Product",new {id=product.ProductId ,@class="blackcolor"})" class="btn btn-solid">Ürün detayı</a>
+                                                            </div>
+                                                        }
+
+                                                    
                                                     </div>
                                                 </div>
 
@@ -92,3 +103,4 @@
     </div>
 </section>
 <!-- tab section start -->
+ 
