--- a/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
+++ b/ECommerce/ECommerce.WEB/Views/Home/_Category.cshtml
@@ -315,7 +315,7 @@
         </div>
         <div class="header-bottom">
             <div class="search-bar">
-                <input class="search__input" type="text" placeholder="Search a product">
+                <input class="search__input" type="text" placeholder="Aradığınız ürün, kategori veya markayı yazınız">
                 <div class="search-icon "></div>
             </div>
         </div>
